# ezmsg-gadget

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
examples/: interrupt.py  move_mouse.py  type_message.py
ezmsg/gadget/: command.py  config.py  ethernet.py  ezmsg-gadget-endpoint.service  ezmsg-gadget.conf  ezmsg-gadget.service  hiddevice.py  install.py  keyboard.py  messages.py  mouse.py
ezmsg/gadget/examples/: absolute_pointer.py  type_message.py
ezmsg/gadget/function/: __init__.py  ethernet.py  keyboard.py  mouse.py
ezmsg/hid/: device.py  keyboard.py  keycodes.py  messages.py  mouse.py  write.py
scripts/: install.sh
scripts/fs/etc/dnsmasq.d/: usb0.conf
scripts/fs/etc/modules-load.d/: dwc2.conf
scripts/fs/etc/network/interfaces.d/: usb0.conf
scripts/fs/lib/systemd/system/: gadget.service
scripts/fs/opt/gadget-priveliged/: init-usb-gadget
scripts/fs/opt/gadget-priveliged/lib/: usb-gadget.sh
src/ezmsg/gadget/: __init__.py  btdaemon.py  command.py  config.py  ezmsg-gadget-endpoint.service  ezmsg-gadget.conf  ezmsg-gadget.service  hiddevice.py  install.py
src/ezmsg/gadget/examples/: absolute_pointer.py  tabs.py  type_message.py
src/ezmsg/gadget/function/: __init__.py  hiddefinition.py  keyboard.py  mouse.py  touch.py
tests/: test_config.py  test_enumerate.py  test_install.py  test_keyboard.py  test_mouse.py  test_write.py
tests/configs/: ezmsg-gadget.conf
tests/configs/ezmsg-gadget.d/: ethernet.conf  keyboard.conf  mouse.conf
