[tool.poetry]
name = "ezmsg-gadget"
version = "0.2.0"
description = "Linux USB gadget and HID manipulation for ezmsg"
authors = ["Griffin Milsap <griffin.milsap@jhuapl.edu>"]
readme = "README.md"
homepage = "https://github.com/griffinmilsap/ezmsg-gadget"
packages = [
  { include = "ezmsg", from = "src" }
]

[tool.poetry.scripts]
ezmsg-gadget = "ezmsg.gadget.command:cmdline"

[tool.poetry.dependencies]
python = "^3.9"
ezmsg = "^3.3.3"
usb-gadget = "0.2" 
aiofile = "^3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "*"
pytest-cov = "*"
numpy = "^1.24.2"
flake8 = "*"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src", "tests"]
testpaths = "tests"

[build-system] 
requires = ["poetry-core"] 
build-backend = "poetry.core.masonry.api"
