[metadata]
name = ezmsg-hid
version = attr:ezmsg.hid.__version__
author = Griffin Milsap
author_email = griffin.milsap@jhuapl.edu
description = Linux USB HID gadget manipulation for ezmsg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/griffinmilsap/ezmsg-hid
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    ezmsg>=3.2.4

[options.extras_require]
test = 
    pytest
    pytest-cov
