[metadata]
name = ezmsg-gadget
version = attr:ezmsg.gadget.__version__
author = Griffin Milsap
author_email = griffin.milsap@jhuapl.edu
description = Linux USB gadget and HID manipulation for ezmsg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/griffinmilsap/ezmsg-gaget
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    ezmsg>=3.3.3
    usb-gadget==0.2
    aiofile
include_package_data = True

[options.entry_points]
console_scripts = 
    ezmsg-gadget = ezmsg.gadget.command:cmdline

[options.extras_require]
test = 
    pytest
    pytest-cov
